--- a/desafio09/mediaquery.css
+++ b/desafio09/mediaquery.css
@@ -1,35 +1,46 @@
-@media screen and (min-width:768px) {
+@media screen and (min-width:600px) {
     main {
+        width: 500px;
+    }
+}
+
+@media screen and (min-width:800px) {
+    main {
+        width: 80%;
+        height: 500px;
         display: flex;
         flex-direction: row-reverse;
-        align-items: left;
-        justify-content: center;
-        max-width: 1000px;
-        height:420px;
-        transition: all 0.4s ease;
-        margin-top: 15rem;
+        align-items: center;
+        margin: 10rem auto;
+        border-radius: 0.6rem;
     }
 
-    main section.img-top {
-        height: 100%;
+    main section {
+        width: 50%;
     }
-    .img-mobile {
+
+    .image .foto-mobile {
         display: none;
     }
-    .img-desktop {
+
+    .image .foto-desktop {
         display: block;
+        border-radius: 0 0.6rem 0.6rem 0;
+        width: 100%;
         height: 100%;
-        max-width: 500px;
-        border-radius: 0 0.6rem 0.6rem 0 ;
+
     }
 
-    main section.center {
-        min-width: 400px;
-        margin: 1rem 2rem;
+    .image {
+        width: 50%;
+        height: 100%;
     }
 
-    main section.center .c-t-q {
-        display:flex ;
+    .info-number {
+        display: flex;
         flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        margin: 3rem 0 0 0;
     }
 }
