--- a/desafio09/mobile.css
+++ b/desafio09/mobile.css
@@ -12,87 +12,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 /*font-family: 'Lexend Deca', sans-serif;*/
 
+:root {
+    --main-heading-stats: hsl(0, 0%, 100%);
+    --main-paragraph: hsla(0, 0%, 100%, 0.75);
+    --stat-headings: hsla(0, 0%, 100%, 0.6);
+    --main-background: hsl(233, 47%, 7%);
+    --card-background: hsl(244, 38%, 16%);
+    --accent: hsl(277, 64%, 61%);
+}
+
+.image .foto-desktop {
+    display: none;
+    filter: opacity(0.4)drop-shadow(0 0 0 hsl(277, 100%, 50%))
+}
+
 body {
-    background-color: hsl(233, 47%, 7%);
+    background-color: var(--main-background);
+    font-size: 15px;
     width: 100vw;
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
+    text-align: center;
 }
 
 main {
-    max-width: 600px;
-    background-color: hsl(244, 38%, 16%);
-    border-radius: 0.6rem;
+    background-color: var(--card-background);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin:2rem 1rem;
+    margin: 4rem auto;
+    width: 94%;
+    transition: all ease-in-out 0.3s;
 }
 
-main section.img-top {
-    height: 40%;
+.image .foto-mobile {
     width: 100%;
-}
-
-.img-desktop {
-    display: none;
-}
-
-main section.img-top > img {
-    width:100%;
     border-radius: 0.6rem 0.6rem 0 0;
-    filter: opacity(0.4)drop-shadow(0 0 0 hsl(277, 100%, 50%));
+    filter: opacity(0.4)drop-shadow(0 0 0 hsl(277, 100%, 50%))
 }
 
-main section.center {
+main section h1  {
+    color: var(--main-heading-stats);
+    font-family: 'Inter', sans-serif; 
+    font-weight: 700;
+    font-size: 2.2rem;
+    text-align: center;
+    padding: 1.5rem;
+}
+
+main section span {
+    color: var(--accent);
+}
+
+main section > p {
+    color: var(--main-paragraph);
+    font-weight: 400;
+    font-family: 'Lexend Deca', sans-serif;
+    padding: 0 4rem 1rem 4.5rem;
+    line-height: 1.5rem;
+}
+
+.info-number {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height:60%;
-    width: 100%;
+    align-items: center;
+    margin: 0 0 2rem;
 }
 
-main section.center > h1 {
-    color: hsl(0, 0%, 100%);
-    font-family: 'Inter', sans-serif ;
-    text-align: center;
-    font-size: 2.2em;
+.info {
+    padding-bottom: 1rem;
+}
+
+.info > h2 {
+    color: var(--main-heading-stats);
+    font-size: 1.5rem;
     font-weight: 700;
-    padding: 2rem;
+    font-family: 'Inter', sans-serif;
 }
 
-main section.center  span {
-    color: hsla(277, 67%, 45%, 0.945);
-}
-main section.center > h2 {
-    color: hsl(0, 0%, 100%);
-    text-align: center;
-    font-weight: 700;
-    font-family: 'Inter', sans-serif;;
-}
-main section.center  p {
-    font-family:  'Lexend Deca', sans-serif;
-    font-size: 1.25em;
-    font-weight: 100; 
-    line-height: 1.5rem;
-    text-align: center;
-    color: hsla(0, 0%, 100%, 0.541);
-    padding: 0rem 2rem 2rem 2rem;
-}
-
-main section.center .c-t-q {
-    padding: 1rem 2rem 3rem  2rem;
-    text-align: center;
+.info > p {
+    color: var(--main-paragraph);
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Lexend Deca', sans-serif; 
     text-transform: uppercase;
-    font-family: 'Inter', sans-serif; ; 
-    font-weight: 700;
-}
-
-main section.center .c-t-q  h2 {
-    color: white;
+    padding-top: 0.4rem;
 }
 
 
