--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -142,16 +142,12 @@ input[type=submit] {
     padding: 0.5rem;
     margin: 2rem 0;
     text-align: left;
-    line-height: 1.2rem;
+    line-height: 1.5rem;
     max-width: 330px;
+    font-size: 14px;
 }
 
-.profile {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-}
+
 
 .profile > p {
     font-size: 14px;
@@ -162,12 +158,22 @@ input[type=submit] {
     border-radius: 50%;
     width: 40px;
     height: 40px;
+    float: left;
+    margin-right: 5px;
+}
+
+.profile-txt {
+ display: flex;
+ flex-direction: column;
+ align-items: flex-start;
+ justify-content: center;
 }
 
 .profile h4 {
     color: var(--Very-Dark-Blue);
     font-weight: 700;
 }
+
 .profile p {
     font-size: 11px;
 }
