--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -103,6 +103,10 @@ input[type=submit] {
     cursor: pointer;
 }
 
+input[type=submit]:hover {
+    background-color: hsla(224, 93%, 58%, 0.637);
+}
+
 .second-s {
     background-color: var(--Light-Grayish-Blue);
     padding: 2rem;
@@ -119,11 +123,10 @@ input[type=submit] {
 
 .second-s p {
     color: var(--Desaturated-Blue);
-    padding-bottom: 2rem;
 }
 
 .second-s p:nth-of-type(2) {
-    margin: 0 auto;
+    margin: 2rem auto;
     color: var(--Moderate-Cyan);
     border-bottom: 1px solid var(--Moderate-Cyan);
     width: 180px;
@@ -132,6 +135,11 @@ input[type=submit] {
     align-items: center;
     justify-content: center;
     gap: 5px;
+}
+
+.second-s p:nth-of-type(2):hover {
+    color: var(--Moderate-Cyan);
+    cursor: pointer;
 }
 
 .testimony {
@@ -148,7 +156,12 @@ input[type=submit] {
 }
 
 
-
+.profile {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 2rem 0;
+}
 .profile > p {
     font-size: 14px;
    
@@ -158,7 +171,6 @@ input[type=submit] {
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    float: left;
     margin-right: 5px;
 }
 
@@ -183,6 +195,80 @@ input[type=submit] {
     padding-bottom: 1rem;
 }
 
+aside {
+    background-color: var(--Desaturated-Blue);
+    color: var(--Light-Gray);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 2rem;
+}
+
+aside h2 {
+    color: #fff;
+    margin: 2rem 0;
+    font-weight: 600;
+}
+
+aside p {
+    line-height: 1.5rem;
+}
+
+footer {
+    background-color: var(--Very-Dark-Blue);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2rem 0 2rem 2rem;
+}
+
+.logo-footer {
+    width: 150px;
+    filter: grayscale(1) invert(2);
+    padding-bottom: 1rem;
+}
+
+.contact {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding: 0.5rem 0;
+    color: #fff;
+}
+
+footer ul {
+    margin: 2rem 0;
+    color: var(--Light-Gray);
+}
+
+ul li {
+    text-align: left;
+    padding-bottom: 1rem;
+}
+
+ul li:nth-child(4){
+    padding-bottom: 2rem;
+}
+
+.social-midias {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+i {
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    padding: 0.5rem;
+}
+
+i:hover {
+    color: var(--Bright-Blue);
+    border-color: var(--Bright-Blue);
+}
 .ilustration-bg {
     background-image: url(images/bg-curve-mobile.svg);
     background-repeat: no-repeat;
