--- a/desafio13/mediaquery.css
+++ b/desafio13/mediaquery.css
@@ -1,4 +1,6 @@
 @media screen and (min-width: 768px) {
+    
+    
     .ilustration {
         max-width: 500px;
     }
@@ -10,8 +12,93 @@
 }
 
 @media screen and (min-width: 998px) {
-    footer {
-       
-       
+   
+    header, main, footer {
+        max-width: 1400px;
+        margin: 0 auto;
     }
+   
+    .first-s, .second-s  {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 1000px;
+    transition: all ease-in-out ;
+   }
+
+   .first-s .text-field, .second-s .text-field {
+    width: 36%;
+   }
+
+   .text-field h1,  .text-field p  {
+    text-align: left;
+   }
+
+   .first-s form {
+    display: flex;
+    flex-direction: row;
+   }
+   
+   .ilustration {
+    width:60%;
+   }
+
+   .second-s .text-field {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+   }
+
+   .second-s p:nth-of-type(2)  {
+    margin: 1rem 0;
+   }
+
+   .second-s h2 {
+    font-size: 1.5em;
+   }
+
+   .second-s .ilustration {
+        min-width: 60%;
+        display: block;
+   }
+
+   aside {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 300px;
+   }
+
+   aside .aside-txt {
+    width: 50%;
+    text-align: left;
+   }
+
+   aside .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+   }
+
+   aside input[type=submit] {
+    max-width: 50%;
+    margin-left: -0.1rem;
+
+   }
+
+   footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 400px;
+    padding: 3rem;
+   }
+
+   footer ul {
+    columns: 2;
+    padding: 0 2rem;
+   }
 }
