--- a/desafio13/mobile.css
+++ b/desafio13/mobile.css
@@ -248,6 +248,7 @@ footer ul {
 ul li {
     text-align: left;
     padding-bottom: 1rem;
+    cursor: pointer;
 }
 
 ul li:nth-child(4){
@@ -280,7 +281,7 @@ i:hover {
 }
 
 .ilustration {
-    width: 90%;
+    max-width: 90%;
     margin: 2rem auto;
     display: block;
 
